2003-08-22  Philippe CHARLIER <p.charlier@chello.be>

	* libgda/gda-xml-database.[ch] (gda_xml_database_set_version): removed
	(gda_xml_database_get_user_version, gda_xml_databaase_set_user_version):
	new functions to let applications have a specific version number.
	(gda_xml_database_save): don't call gda_xml_database_set_version.
	(gda_xml_database_init, gda_xml_database_finalize): manage the
	'user_version private field.

2003-08-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* libgda/gda-blob.c:
	* libgda/gda-blob.h: removede the 'connection' parameter. The provider
	should store that as part of the private data in the GdaBlob. Added
	gda_blob_remove and gda_blob_free_data to allow for blob removal and
	freeing the data stored by the provider.

	* libgda/gda-connection.c:
	* libgda/gda-connection.h: added gda_connection_create_blob and
	GDA_CONNECTION_FEATURE_BLOBS.
	
	* libgda/gda-server-provider.c:
	* libgda/gda-server-provider.h: added new virtual function create_blob.
	Providers that support BLOBs should override this.

	* libgda/gda-value.c: use gda_blob_free_data when clearing a BLOB value.
	* libgda/libgda.h: include gda-blob.h
	
	* providers/postgres/gda-postgres-provider.c: override create_blob and
	support GDA_CONNECTION_FEATURE_BLOBS.

	* providers/postgres/gda-postgres-recordset.c: when we get a blob, store
	the current connection data in its private data.

	* providers/postgres/gda-postgres.h: added
	gda_postgres_blob_set_connection and *blob_create declarations.

	* providers/postgres/utils.c: adapted the blob interface to the new one.
	Added remove and free_data. A few fixes.

	* testing/client.c: check for FEATURE_BLOBS.

	* testing/postgres-test.c: added tests for BLOBs and fixed print_errors.

2003-08-15  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/Makefile.am:
	* libgda/gda-blob.c:
	* libgda/gda-blob.h:
	* libgda/gda-util.c:
	* libgda/gda-value.c:
	* libgda/gda-value.h:
	* providers/postgres/gda-postgres-provider.c: