@@ -303,6 +303,16 @@ Management of connections to data sources
 @id: 
 
 
+<!-- ##### FUNCTION gda_connection_create_blob ##### -->
+<para>
+
+</para>
+
+@cnc: 
+@blob: 
+@Returns: 
+
+
 <!-- ##### FUNCTION gda_connection_get_errors ##### -->
 <para>
 
@@ -329,6 +339,7 @@ Management of connections to data sources
 @GDA_CONNECTION_FEATURE_USERS: 
 @GDA_CONNECTION_FEATURE_VIEWS: 
 @GDA_CONNECTION_FEATURE_XML_QUERIES: 
+@GDA_CONNECTION_FEATURE_BLOBS: 
 
 <!-- ##### FUNCTION gda_connection_supports ##### -->
 <para>
